--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
     <!-- Header section start -->
     <header>
-        
+        <h3>G3 Architects</h3>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
     </header>
 
     <!-- Main section start -->
