--- a/index.html
+++ b/index.html
@@ -10,25 +10,49 @@
 
 <body>
     <!-- Header section start -->
-    <header>
-        <h3>G3 Architects</h3>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Login</a></li>
-        </ul>
-    </header>
+    <!DOCTYPE html>
+    <html lang="en">
 
-    <!-- Main section start -->
-    <main>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>G3 Architects Project</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-    </main>
+    <body>
+        <!-- Header section start -->
+        <header>
+            <nav>
+                <h3 class="nav-titale">G3 Architects</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </nav>
+            <div class="banner-container">
+                <div class="banner-content">
+                    <h1 class="banner-titale">Brand New Group of Architects </h1>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised words
+                        which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+                <img src="images/banner.png" alt="Banner image">
+            </div>
+        </header>
 
-    <!-- Footer section start -->
-    <Footer>
+        <!-- Main section start -->
+        <main>
 
-    </Footer>
-</body>
+        </main>
 
-</html>
+        <!-- Footer section start -->
+        <Footer>
+
+        </Footer>
+    </body>
+
+    </html>
