--- a/index.html
+++ b/index.html
@@ -46,7 +46,110 @@
 
         <!-- Main section start -->
         <main>
+            <section class="features-section">
+                <div class="teams-image">
+                    <img src="images/team1.png" alt="img">
+                    <img src="images/team2.png" alt="img">
+                    <img src="images/team3.png" alt="img">
+                    <img src="images/team4.png" alt="img">
+                </div>
 
+                <div class="teams-content">
+                    <h3 class="teams-titale"><span class="quick-list">Quick list</span> <span class="of-our">of
+                            Our</span><br> <span class="features">Features</span></h3>
+                    <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even.</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            </section>
+
+            <section class="love-section">
+                <div class="love-container">
+                    <h3 class="nav-titale">Features you will <br> love & enjoy</h3>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised words
+                        which don't look even</p>
+
+                    <div class="love-card">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="banner-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="love-card">
+                        <h4>Drag & Drop Builder</h4>
+                        <p class="banner-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="love-card">
+                        <h4>Awesome Modern Design</h4>
+                        <p class="banner-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="love-card">
+                        <h4>Super Easy to Edit</h4>
+                        <p class="banner-description">There are many variations of passages of Lorem Ipsum available,
+                            but the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                </div>
+
+                <div class="love-image">
+                    <img src="images/architect.png" alt="img">
+                    <div class="ten-years">
+                        <h2>10+Year</h2>
+                        <p>Experience</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="facts-section">
+                <div>
+                    <h3 class="nav-titale">Some Facts</h3>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration.</p>
+                </div>
+                <br>
+                <div class="facts-container">
+                    <div class="card">
+                        <img src="images/icons/ribon.png" alt="img">
+                        <h2 class="card-status">54</h2>
+                        <p class="card-titale">Awards Winnings</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/projects.png" alt="img">
+                        <h2 class="card-status">1458</h2>
+                        <p class="card-titale">Project Finished</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/customers.png" alt="img">
+                        <h2 class="card-status">590</h2>
+                        <p class="card-titale">Clients Worked</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/email.png" alt="img">
+                        <h2 class="card-status">22578</h2>
+                        <p class="card-titale">Email Send</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="sponspors-container">
+                <h3 class="nav-titale">Our Sponspors</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
+
+                <div class="sponspors-image">
+                    <img src="images/sponsors/spotify.png" alt="img">
+                    <img src="images/sponsors/amazon.png" alt="img">
+                    <img src="images/sponsors/google.png" alt="img">
+                    <img src="images/sponsors/telerama.png" alt="img">
+                    <img src="images/sponsors/figma.png" alt="img">
+                </div>
+            </section>
         </main>
 
         <!-- Footer section start -->
