--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         </main>
 
         <!-- Footer section start -->
-        <Footer>
-
+        <Footer class="footer-container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
         </Footer>
     </body>
 
